[tool.poetry]
name = "minimo-char-generator"
version = "0.1.0"
description = "Minimum system to generate characters for RPG based on Minimo RPG rules"
authors = ["Thiago Sant' Helena <thiago.sant.helena@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.60.1"
records = "^0.5.3"
sqlalchemy = "^1.3.18"
alembic = "^1.4.2"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
mypy = "^0.782"
flake8 = "^3.8.3"
bandit = "^1.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
